--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-pytorch
-numpy
-scikit-image
-opencv-python
-tqdm
+torch==1.3.0.post2
+pytorch-ssim==0.1
+numpy==1.16.4
+opencv-python==4.1.1.26
+scikit-image==0.15.0
+tqdm==4.37.0
